--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ button {
   font-family: "Georgia", "Times New Roman", "Times", serif;
   font-size: 35px;
   letter-spacing: normal;
+  min-width: 150px;
   padding: 15px;
   border: 2px solid rgb(124, 148, 118);
   border-radius: 5px;
